log
do., 23 de mar. de 2025 19:57:41: 
 tests:  0|5
total_score: 0/70
3f6cb15
lu., 24 de mar. de 2025 20:11:20: 
 exercises.c | 52 +++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 49 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:88:23: error: implicit declaration of function 'current' [-Werror=implicit-function-declaration]
          ptr = (int *)current(L);
                       ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
effab5e
ma., 25 de mar. de 2025 13:37:59: 
 exercises.c | 50 ++++++++++++++++++++++++++++----------------------
 1 file changed, 28 insertions(+), 22 deletions(-)
 tests:  5|2
total_score: 50/70
c069dcc
ma., 25 de mar. de 2025 13:41:15: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  8|1
total_score: 60/70
d198321
